<resources>
    <string name="app_name">ProjetDevMobileMoussironLamothe</string>
    <string name="info">Info</string>
    <string name="produits">Produits</string>
    <string name="student1">Nathan Moussiron</string>
    <string name="student2">Hugo Lamothe</string>
    <string name="infoStudent1">Info Etudiant</string>
    <string name="NameStudent1">Moussiron Nathan</string>
    <string name="MailStudent1">nathan.moussiron@epsi.fr</string>
    <string name="GroupStudent1">Dev Full stack Groupe 1</string>
    <string name="https_www_epsi_fr">https://www.epsi.fr/</string>
    <string name="products_url">Products_url</string>
    <string name="title">Title</string>
    <string name="categorie">Categorie</string>
    <string name="description">Description :</string>
</resources>