<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentActivity">

    <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/header_layout"
            android:id="@+id/include2" />

    <ImageView
            android:layout_width="203dp"
            android:layout_height="203dp"
            android:id="@+id/imageView2"
            android:layout_marginStart="104dp"
            android:layout_marginEnd="104dp"
            android:src="@drawable/natdu33"/>

    <TextView
            android:text="@string/infoStudent1"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:id="@+id/InfoStudent1"
            android:layout_marginTop="50dp"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="106dp"
            android:textAppearance="@style/InfoStudent"
            android:textAlignment="center"/>

    <TextView
            android:text="@string/NameStudent1"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:id="@+id/nameStudent1"
            android:textAlignment="center"
            android:textAppearance="@style/InfoStudent"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="106dp"
            android:layout_marginTop="10dp" />

    <TextView
            android:text="@string/MailStudent1"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:id="@+id/MailStudent1"
            android:textAppearance="@style/InfoStudent"
            android:textAlignment="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="116dp"
            android:layout_marginTop="10dp" />

    <TextView
            android:text="@string/GroupStudent1"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:id="@+id/GroupStudent1"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="106dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/InfoStudent"
            android:textAlignment="center" />

    <TextView
            android:text="@string/https_www_epsi_fr"
            android:layout_width="130dp"
            android:id="@+id/lien"
            android:layout_height="25dp"
            android:layout_marginStart="145dp"
            android:layout_marginEnd="106dp"
            android:layout_marginTop="250dp" />

</LinearLayout>